--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -78,12 +78,27 @@
             android:textColor="@color/colorBlack"
             android:text="Description"
             android:autoLink="all"></TextView>
-        <TextView
-            android:id="@+id/pLikesTv"
-            android:text="1k Likes"
-            android:textColor="@color/colorPrimary"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></TextView>
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/pLikesTv"
+                android:text="1k Likes"
+                android:layout_weight="1"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"></TextView>
+            <TextView
+                android:id="@+id/pCommentsTv"
+                android:text="1k Comments"
+                android:layout_weight="1"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorPrimary"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="end"/>
+        </LinearLayout>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
