--- a/app/src/main/res/layout/activity_post_detail.xml
+++ b/app/src/main/res/layout/activity_post_detail.xml
@@ -7,6 +7,7 @@
     tools:context=".PostDetailActivity">
 
     <androidx.core.widget.NestedScrollView
+        android:layout_above="@id/commentsLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -157,11 +158,25 @@
 
             </androidx.cardview.widget.CardView>
 
+            <TextView
+                android:text="Comments"
+                android:textColor="@color/colorBlack"
+                android:drawablePadding="5dp"
+                android:padding="2dp"
+                android:drawableStart="@drawable/ic_comments_black"
+                android:drawableLeft="@drawable/ic_comments_black"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
     <RelativeLayout
+        android:id="@+id/commentsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
