--- a/app/src/main/res/layout/row_comments.xml
+++ b/app/src/main/res/layout/row_comments.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="1dp"
-    app:contentPadding="2dp"
+    android:layout_margin="5dp"
+    app:contentPadding="5dp"
     app:cardBackgroundColor="@color/colorWhite">
 
     <RelativeLayout
