--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -7,5 +7,7 @@
         android:icon="@drawable/ic_search_black"/>
     <item android:title="Profile" android:id ="@+id/nav_profile"
         android:icon="@drawable/ic_profile_black"/>
+    <item android:title="Notifications" android:id ="@+id/nav_notification"
+        android:icon="@drawable/ic_notifications_black"/>
 
 </menu>
