--- a/app/src/main/res/layout/row_notification.xml
+++ b/app/src/main/res/layout/row_notification.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardBackgroundColor="@color/colorWhite"
     app:cardUseCompatPadding="true"
@@ -15,12 +15,13 @@
         android:orientation="horizontal">
 
         <com.blogspot.atifsoftwares.circularimageview.CircularImageView
+            android:id="@+id/avatarIV"
             android:layout_width="70dp"
             android:layout_height="70dp"
-            android:id="@+id/avatarIV"
             android:src="@drawable/ic_image_person">
 
         </com.blogspot.atifsoftwares.circularimageview.CircularImageView>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -31,21 +32,23 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Name"
+                android:textColor="@color/colorBlack"
                 android:textSize="18sp"
-                android:textStyle="bold"
-                android:textColor="@color/colorBlack"/>
+                android:textStyle="bold" />
+
             <TextView
                 android:id="@+id/notificationTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Notification"
-                android:textColor="@color/colorBlack"/>
+                android:textColor="@color/colorBlack" />
+
             <TextView
                 android:id="@+id/timeTv"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Time"
-                android:textColor="@color/colorBlack"/>
+                android:textColor="@color/colorBlack" />
 
 
         </LinearLayout>
