--- a/app/src/main/res/layout/row_posts.xml
+++ b/app/src/main/res/layout/row_posts.xml
@@ -89,15 +89,16 @@
                 android:textColor="@color/colorPrimary"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"></TextView>
+
             <TextView
                 android:id="@+id/pCommentsTv"
-                android:text="1k Comments"
-                android:layout_weight="1"
-                android:textAlignment="textEnd"
-                android:textColor="@color/colorPrimary"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="end"/>
+                android:layout_weight="1"
+                android:gravity="end"
+                android:text="1k Comments"
+                android:textAlignment="textEnd"
+                android:textColor="@color/colorPrimary" />
         </LinearLayout>
         <View
             android:layout_width="match_parent"
