--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -49,7 +49,8 @@
             android:backgroundTint="#764BC4"
             android:gravity="end"
             android:text="Post"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            tools:ignore="RtlCompat" />
         />
 
 
