--- a/app/src/main/res/layout/activity_there_profile.xml
+++ b/app/src/main/res/layout/activity_there_profile.xml
@@ -31,6 +31,7 @@
                 android:layout_height="120dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:background="@drawable/ic_image_person"
                 android:src="@drawable/ic_add_image"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
